# gsMap

./: .gitignore  .pre-commit-config.yaml  Cauchy_combination.py  Find_Latent_Representations.py  GPS.py  GPS_main.py  LICENSE  Latent_to_Gene_V2.py  Make_Annotations_V2.py  README.md  Regression_Read.py  Spatial_LDSC.py  generate_r2_matrix.py  jackknife.py  pyproject.toml  setup.py
.github/workflows/: docs.yml  publish-to-pypi.yml  sphinx.yml
GNN_VAE/: Model.py  Train.py
docs/: requirements.txt
docs/source/: advanced_usage.md  api.rst  conf.py  cortex.rst  cortex_example.md  data.rst  data_format.md  human_cortex.ipynb  index.rst  install.rst  mouse.rst  mouse_example.md  quick_mode.md  release.rst  step_by_step.md  tutorials.rst
docs/source/api/: cauchy_combination.rst  create_slice_mean.rst  find_latent_representations.rst  format_sumstats.rst  generate_ldscore.rst  latent_to_gene.rst  quick_mode.rst  report.rst  spatial_ldsc.rst  visualization.rst
docs/source/charts/cortex/: Cortex_151507_Height.json  Cortex_151507_IQ.json  Cortex_151507_MCHC.json  Cortex_151507_SCZ.json
example/: snp_gene_weight_matrix.py
src/: .gitignore
src/GPS/: Build_LD_Score_old.py  Find_Latent_Representations.py  GPS_main.py  Latent_to_Gene_V2.py  Make_Annotations_V2.py  Regression_Read.py  Spatial_LDSC.py  __init__.py  cauchy_combination_test.py  config.py  find_latent_representation.py  format_sumstats.py  generate_ldscore.py  generate_r2_matrix.py  laten_to_gene.py  latent_to_gene.py  main.py  make_annotations.py  regression_read.py  spatial_LDSC.py  spatial_ldsc_multiple_sumstats.py  visualize.py
src/GPS/GNN_VAE/: Adjacency_Matrix.py  adjacency_matrix.py  train.py
src/gsMap/: __init__.py  __main__.py  cauchy_combination_test.py  config.py  create_slice_mean.py  diagnosis.py  find_latent_representation.py  format_sumstats.py  generate_ldscore.py  generate_r2_matrix.py  latent_to_gene.py  main.py  make_annotations.py  regression_read.py  report.py  run_all_mode.py  setup.py  spatial_ldsc_multiple_sumstats.py  visualize.py
src/gsMap/GNN/: adjacency_matrix.py  model.py  train.py
src/gsMap/GNN_VAE/: adjacency_matrix.py  model.py  train.py
src/gsMap/templates/: report_template.html
src/gsMap/utils/: generate_r2_matrix.py  jackknife.py  make_annotations.py  manhattan_plot.py  regression_read.py
test/: GPS-snakemake-workflow-macaque.smk  GPS-snakemake-workflow.smk
visualization_web_docs/: requirements.txt
visualization_web_docs/source/: conf.py  index.rst
